--- a/app/src/main/res/layout/activity_add_vehicle.xml
+++ b/app/src/main/res/layout/activity_add_vehicle.xml
@@ -24,15 +24,15 @@
 
     <Button
         android:id="@+id/selectImgBtn"
-        style="@style/Widget.AppCompat.Button"
+        style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="288dp"
         android:layout_height="57dp"
         android:layout_marginTop="20dp"
-        android:background="#4aff7a"
-        android:backgroundTint="#5CE864"
+        android:background="#3181FB"
+        android:backgroundTint="#2F4FF3"
         android:foregroundTint="#3AC561"
-        android:text="Select Image"
-        android:textColor="#4CE30B"
+        android:text="See Owned Vehicles"
+        android:textColor="#D2DDFF"
         android:textColorHighlight="#BA6565"
         android:textColorHint="#B33E3E"
         android:textColorLink="#000000"
@@ -47,16 +47,16 @@
 
     <Button
         android:id="@+id/selectImgBtn2"
-        style="@style/Widget.AppCompat.Button"
+        style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="288dp"
         android:layout_height="57dp"
         android:layout_marginTop="14dp"
-        android:background="#4aff7a"
-        android:backgroundTint="#5CE864"
+        android:background="#00FF44"
+        android:backgroundTint="#00FF0F"
         android:foregroundTint="#3AC561"
         android:onClick="addVehicle"
         android:text="Add Vehicle"
-        android:textColor="#4CE30B"
+        android:textColor="#000000"
         android:textColorHighlight="#BA6565"
         android:textColorHint="#B33E3E"
         android:textColorLink="#000000"
