--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,16 +8,16 @@
 
     <Button
         android:id="@+id/button2"
-        style="@style/Widget.AppCompat.Button"
+        style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="288dp"
         android:layout_height="57dp"
-        android:layout_marginTop="120dp"
+        android:layout_marginTop="96dp"
         android:background="#F7FFF9"
         android:backgroundTint="#CF1919"
         android:foregroundTint="#259A46"
         android:onClick="signOut"
         android:text="Try Another Account"
-        android:textColor="#F10909"
+        android:textColor="#FFFFFF"
         android:textColorHighlight="#BA6565"
         android:textColorHint="#B33E3E"
         android:textColorLink="#E6E6E6"
@@ -31,16 +31,16 @@
 
     <Button
         android:id="@+id/button5"
-        style="@style/Widget.AppCompat.Button"
+        style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="288dp"
         android:layout_height="57dp"
-        android:layout_marginTop="52dp"
-        android:background="#4aff7a"
-        android:backgroundTint="#5CE864"
+        android:layout_marginTop="24dp"
+        android:background="#00FF44"
+        android:backgroundTint="#00FF0F"
         android:foregroundTint="#3AC561"
         android:onClick="addNewRide"
         android:text="Add New Ride"
-        android:textColor="#4CE30B"
+        android:textColor="#151515"
         android:textColorHighlight="#BA6565"
         android:textColorHint="#B33E3E"
         android:textColorLink="#000000"
@@ -57,6 +57,7 @@
         android:id="@+id/introTextField"
         android:layout_width="379dp"
         android:layout_height="101dp"
+        android:background="@android:color/transparent"
         android:editable="false"
         android:text="Hey $Name$! Here are your avaliable rides:"
         android:textAlignment="center"
@@ -66,7 +67,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.1" />
+        app:layout_constraintVertical_bias="0.048" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
