--- a/app/src/main/res/layout/activity_secundary.xml
+++ b/app/src/main/res/layout/activity_secundary.xml
@@ -47,4 +47,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <Button
+        android:id="@+id/btnBookRide"
+        style="@style/Widget.AppCompat.Button.Borderless"
+        android:layout_width="299dp"
+        android:layout_height="59dp"
+        android:layout_marginTop="29dp"
+        android:background="#05FF12"
+        android:onClick="bookRide"
+        android:text="Book Ride"
+        android:textColor="#000000"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewSits2" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
