--- a/app/src/main/res/layout/activity_user_info.xml
+++ b/app/src/main/res/layout/activity_user_info.xml
@@ -38,16 +38,16 @@
 
     <Button
         android:id="@+id/button4"
-        style="@style/Widget.AppCompat.Button"
+        style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="288dp"
         android:layout_height="57dp"
         android:layout_marginTop="13dp"
-        android:background="#4aff7a"
-        android:backgroundTint="#5CE864"
-        android:foregroundTint="#3AC561"
+        android:background="#00FF44"
+        android:backgroundTint="#00FF0F"
+        android:foregroundTint="#00FF48"
         android:onClick="saveInfo"
         android:text="Save Info"
-        android:textColor="#4CE30B"
+        android:textColor="#000000"
         android:textColorHighlight="#BA6565"
         android:textColorHint="#B33E3E"
         android:textColorLink="#000000"
@@ -57,20 +57,25 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+        />
 
     <Button
         android:id="@+id/button3"
-        style="@style/Widget.AppCompat.Button"
+        style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="288dp"
         android:layout_height="57dp"
-        android:layout_marginTop="77dp"
-        android:background="#F7FFF9"
+        android:layout_marginTop="80dp"
+        android:background="#FF0000"
         android:backgroundTint="#CF1919"
         android:foregroundTint="#259A46"
         android:onClick="signOut"
+        android:shadowColor="#000000"
+        android:shadowDx="0"
+        android:shadowDy="0"
+        android:shadowRadius="0"
         android:text="Try Another Account"
-        android:textColor="#F10909"
+        android:textColor="#FFFFFF"
         android:textColorHighlight="#BA6565"
         android:textColorHint="#B33E3E"
         android:textColorLink="#E6E6E6"
@@ -78,7 +83,7 @@
         android:textStyle="bold"
         app:iconTint="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.52"
+        app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
