pretty much done (gotta add the creative thingy)

--- a/app/src/main/res/layout/activity_add_vehicle.xml
+++ b/app/src/main/res/layout/activity_add_vehicle.xml
@@ -31,6 +31,7 @@
         android:background="#3181FB"
         android:backgroundTint="#2F4FF3"
         android:foregroundTint="#3AC561"
+        android:onClick="seeOwnedVehicles"
         android:text="See Owned Vehicles"
         android:textColor="#D2DDFF"
         android:textColorHighlight="#BA6565"
