--- a/app/src/main/res/layout/my_second_row.xml
+++ b/app/src/main/res/layout/my_second_row.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:id="@+id/mainLayout">
+    android:id="@+id/secondLayout">
 
     <androidx.cardview.widget.CardView
         android:layout_width="0dp"
@@ -25,43 +25,35 @@
 
             <TextView
                 android:id="@+id/textViewNameVehicle"
-                android:layout_width="132dp"
-                android:layout_height="32dp"
-                android:text="Lucas Slepetys"
+                android:layout_width="175dp"
+                android:layout_height="48dp"
+                android:layout_marginStart="20dp"
+                android:text="Ferrari"
                 android:textAlignment="textStart"
                 android:textColor="#4E4E4E"
-                android:textSize="16sp"
+                android:textSize="24dp"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/imageViewVehicle"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.514" />
-
-            <TextView
-                android:id="@+id/textViewStatusVehicle"
-                android:layout_width="125dp"
-                android:layout_height="32dp"
-                android:layout_marginStart="140dp"
-                android:text="Avaliable sits: 4"
-                android:textAlignment="textStart"
-                android:textColor="#4E4E4E"
-                android:textColorHint="#101010"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/imageViewVehicle"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.514" />
-
-            <ImageView
-                android:id="@+id/imageViewVehicle"
-                android:layout_width="100dp"
-                android:layout_height="105dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@android:drawable/ic_menu_gallery" />
+                app:layout_constraintVertical_bias="0.538" />
+
+            <TextView
+                android:id="@+id/textViewStatusVehicle"
+                android:layout_width="206dp"
+                android:layout_height="46dp"
+                android:layout_marginStart="2dp"
+                android:text="Status: Open"
+                android:textAlignment="textStart"
+                android:textColor="#4E4E4E"
+                android:textColorHint="#101010"
+                android:textSize="24dp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/textViewNameVehicle"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.514" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
