--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,12 +6,20 @@
     android:layout_height="match_parent"
     tools:context=".activiities.MainActivity.MainActivity">
 
+    <TextView
+        android:id="@+id/empty_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:visibility="gone"
+        android:text="@string/no_data_available" />
+
     <Button
         android:id="@+id/button2"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="288dp"
         android:layout_height="57dp"
-        android:layout_marginTop="96dp"
+        android:layout_marginTop="16dp"
         android:background="#F7FFF9"
         android:backgroundTint="#CF1919"
         android:foregroundTint="#259A46"
@@ -27,24 +35,24 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/recyclerView" />
+        app:layout_constraintTop_toBottomOf="@+id/button5" />
 
     <Button
         android:id="@+id/button5"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="288dp"
         android:layout_height="57dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="56dp"
         android:background="#00FF44"
         android:backgroundTint="#00FF0F"
         android:foregroundTint="#3AC561"
         android:onClick="addNewRide"
-        android:text="Add New Ride"
+        android:text="Add New Ride / See Owned Rides"
         android:textColor="#151515"
         android:textColorHighlight="#BA6565"
         android:textColorHint="#B33E3E"
         android:textColorLink="#000000"
-        android:textSize="20sp"
+        android:textSize="16sp"
         android:textStyle="bold"
         app:iconTint="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
